implementing tpc.html

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,24 @@
 
     /*Buttons*/
 
+    /*Section device*/
+    section.features .device-container,
+    section.features .feature-item {
+      max-width: 325px;
+      margin: 0 auto;
+    }
+
+    section.features .device-container {
+      margin-bottom: 100px;
+    }
+
+    @media (min-width: 992px) {
+      section.features .device-container {
+        margin-bottom: 0;
+      }
+    }
+    /*Section device*/
+
     /*Footer*/
     #footerPage .hoverable-icon > a:hover,
     #footerPage .hoverable-icon > a:focus:hover {
