--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,39 @@
     }
     /*Section device*/
 
+    /*Carousel*/
+    .carousel-multi-item.v-2 .carousel-inner .carousel-item.active,
+    .carousel-multi-item.v-2 .carousel-item-next,
+    .carousel-multi-item.v-2 .carousel-item-prev {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+    }
+
+    .carousel-multi-item.v-2 .carousel-item-right.active,
+    .carousel-multi-item.v-2 .carousel-item-next {
+      -webkit-transform: translateX(50%);
+      -ms-transform: translateX(50%);
+      transform: translateX(50%);
+    }
+
+    .carousel-multi-item.v-2 .carousel-item-left.active,
+    .carousel-multi-item.v-2 .carousel-item-prev {
+      -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+      transform: translateX(-50%);
+    }
+
+    .carousel-multi-item.v-2 .carousel-item-right,
+    .carousel-multi-item.v-2 .carousel-item-left {
+      -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+      transform: translateX(0);
+    }
+    /*Carousel*/
+
+
     /*Footer*/
     #footerPage .hoverable-icon > a:hover,
     #footerPage .hoverable-icon > a:focus:hover {
