implementing tpc.html view

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 
     #mainNav .navbar-brand > img:hover,
     #mainNav .navbar-brand > img:focus:hover {
-      color: #fdcc52;
+      color: #d32f2f;
     }
 
     #mainNav .navbar-toggler {
