--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,18 @@
       color: #fcbd20;
     }
 
+    /* Preloader */
+    #preloader {
+    	position: fixed;
+    	width: 100%;
+    	height: 100%;
+    	top: 0;
+    	left: 0;
+    	z-index: 999999;
+    	background: #000;
+    }
+    /* Preloader */
+
     /*Navbar style*/
     #mainNav {
     border-color: rgba(34, 34, 34, 0.05);
