--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,19 @@
     	z-index: 999999;
     	background: #000;
     }
+
+    .loader {
+    	width: 40px;
+    	height: 40px;
+    	position: absolute;
+    	top: 50%;
+    	left: 50%;
+    	margin-top: -13px;
+    	margin-left: -13px;
+    	border-radius: 60px;
+    	animation: loader 0.8s linear infinite;
+    	-webkit-animation: loader 0.8s linear infinite;
+    }
     /* Preloader */
 
     /*Navbar style*/
