--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,19 @@
       background: url("../img/patterns/soufun-pattern.png"), linear-gradient(to left, #4db6ac, #00838f);  /* Standard syntax */
     }
 
+    .tpc-design {
+
+      width: 100%;
+      padding-top: 100px;
+      padding-bottom: 100px;
+      color: white;
+
+      background: url("../img/patterns/tpc-pattern.png"), -webkit-linear-gradient(to left, #4db6ac, #00838f); /* For Safari 5.1 to 6.0 */
+      background: url("../img/patterns/tpc-pattern.png"), -o-linear-gradient(to left, #4db6ac, #00838f); /* For Opera 11.1 to 12.0 */
+      background: url("../img/patterns/tpc-pattern.png"), -moz-linear-gradient(to left, #4db6ac, #00838f); /* For Firefox 3.6 to 15 */
+      background: url("../img/patterns/tpc-pattern.png"), linear-gradient(to left, #4db6ac, #00838f);  /* Standard syntax */
+    }
+
     main.design .device-container {
       max-width: 325px;
       margin-right: auto;
