implementing uami_vr.html view

--- a/device-mockups/device-mockups.css
+++ b/device-mockups/device-mockups.css
@@ -101,7 +101,7 @@
 
 /* MacBook 2015 */
 .device-mockup.macbook_2015 {
-	padding-top: 60.00%; padding-bottom: 60.00%; 
+	padding-top: 60.00%; padding-bottom: 60.00%; padding-left: 20.00%; padding-right: 20.00%;
 }
 
 .device-mockup.macbook_2015 > .device,
