--- a/device-mockups/device-mockups.css
+++ b/device-mockups/device-mockups.css
@@ -101,7 +101,7 @@
 
 /* MacBook 2015 */
 .device-mockup.macbook_2015 {
-  padding-bottom: 60.00%; padding-left: 150.00%; padding-right: 150.00%;
+  padding-bottom: 60.00%; left: 150.00%; right: 150.00%;
 }
 
 .device-mockup.macbook_2015 > .device,
