--- a/device-mockups/device-mockups.css
+++ b/device-mockups/device-mockups.css
@@ -101,7 +101,7 @@
 
 /* MacBook 2015 */
 .device-mockup.macbook_2015 {
-  padding-bottom: 100.00%; width: 200%;
+  padding-bottom: 100.00%;
 }
 
 .device-mockup.macbook_2015 > .device,
