--- a/device-mockups/device-mockups.css
+++ b/device-mockups/device-mockups.css
@@ -39,6 +39,12 @@
 	padding-bottom: 61.775701%;
 }
 
+.device-mockup-mac {
+	position: absolute;
+	width: 100%;
+	padding-bottom: 61.775701%;
+}
+
 	.device-mockup > .device {
 		position: absolute;
 		top: 0; bottom: 0; left: 0; right: 0;
@@ -100,26 +106,26 @@
 }
 
 /* MacBook 2015 */
-.device-mockup.macbook_2015 {
-  height:480px; width: 920px;
+.device-mockup-mac.macbook_2015 {
+  padding-bottom: 57.50%;
 }
 
-.device-mockup.macbook_2015 > .device,
-.device-mockup.macbook_2015.grey > .device {
+.device-mockup-mac.macbook_2015 > .device,
+.device-mockup-mac.macbook_2015.grey > .device {
 	background-image: url("macbook_2015/grey.png");
 }
 
-.device-mockup.macbook_2015 > .device,
-.device-mockup.macbook_2015.silver > .device {
+.device-mockup-mac.macbook_2015 > .device,
+.device-mockup-mac.macbook_2015.silver > .device {
 	background-image: url("macbook_2015/silver.png");
 }
 
-.device-mockup.macbook_2015 > .device,
-.device-mockup.macbook_2015.gold > .device {
+.device-mockup-mac.macbook_2015 > .device,
+.device-mockup-mac.macbook_2015.gold > .device {
 	background-image: url("macbook_2015/gold.png");
 }
 
-.device-mockup.macbook_2015 > .device > .screen {
+.device-mockup-mac.macbook_2015 > .device > .screen {
     top: 7.5%; bottom: 10.9%; left: 12.46%; right: 12.56%;
 }
 
