--- a/device-mockups/device-mockups.css
+++ b/device-mockups/device-mockups.css
@@ -101,7 +101,7 @@
 
 /* MacBook 2015 */
 .device-mockup.macbook_2015 {
-  height: 320px; width: 640px; 
+  padding-bottom: 57.50%;
 }
 
 .device-mockup.macbook_2015 > .device,
