--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@
     }
 
     .flip-card {
-      background-color: transparent;
+      background-color: white;
       width: 300px;
       height: 200px;
       border: 1px solid #f1f1f1;
