--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,9 @@
     }
 
     .flip-card {
-      background-color: white;
+      background-color: transparent;
       width: 300px;
       height: 200px;
-      border: 1px solid #f1f1f1;
       perspective: 1000px; /* Remove this if you don't want the 3D effect */
     }
 
