--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,22 @@
       transform: rotateY(180deg);
     }
 
+    .avatar {
+      position: relative;
+      top: -80px;
+      margin-bottom: -50px;
+    }
+    .avatar > img {
+      width: 150px;
+      height: 150px;
+      max-width: 150px;
+      max-height: 150px;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      border: 5px solid rgba(255,255,255,0.5);
+    }
+
     /*Card*/
 
     /*Main*/
