--- a/css/style.css
+++ b/css/style.css
@@ -74,13 +74,25 @@
       }
     }
 
-    .w-200 {
-      width: 200px;
+    .w-280 {
+        width: 280px;
     }
 
-    .w-40 {
-      width: 40px;
-      padding-top: -50px;
+    .mini-avatar {
+        position: relative;
+        top: -50px;
+        margin-bottom: -50px;
+    }
+
+    .mini-avatar img {
+        width: 100px;
+        height: 100px;
+        max-width: 100px;
+        max-height: 100px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        border: 5px solid rgba(255,255,255,0.5);
     }
 
     /*Card*/
