--- a/css/style.css
+++ b/css/style.css
@@ -87,9 +87,18 @@
     .mini-avatar img {
         width: 100px;
         height: 100px;
-        max-width: 120px;
-        max-height: 120px;
+        max-width: 100px;
+        max-height: 100px;
         border: 5px solid rgba(255,255,255,0.5);
+    }
+
+    @media (max-width: 575px) {
+      .mini-avatar img {
+        width: 40px;
+        height: 40px;
+        max-width: 40px;
+        min-width: 40px;
+      }
     }
 
     /*Card*/
