--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,12 @@
 
     @media (max-width: 575px) {
       .mini-avatar img {
-        width: 40px;
-        height: 40px;
+        width: 60px;
+        height: 60px;
+        top: -60px;
         max-width: 40px;
         min-width: 40px;
+        border: 2px solid rgba(255,255,255,0.5);
       }
     }
 
