--- a/css/style.css
+++ b/css/style.css
@@ -93,11 +93,14 @@
     }
 
     @media (max-width: 575px) {
+      .mini-avatar {
+          position: relative;
+          top: -80px;
+          margin-bottom: -10px;
+      }
       .mini-avatar img {
-        position: relative;
         width: 60px;
         height: 60px;
-        top: -60px;
         max-width: 40px;
         min-width: 40px;
         border: 2px solid rgba(255,255,255,0.5);
