--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,10 @@
     }
 
     @media (max-width: 575px) {
+      .wh-200 {
+        width: 200px;
+        height: 200px;
+      }
       .mini-avatar {
           position: relative;
           top: -25px;
