--- a/css/style.css
+++ b/css/style.css
@@ -230,11 +230,12 @@
     /*Buttons*/
 
     /*Icon social*/
-    .social-icon > li > a:hover,
-    .social-icon > li > a:focus:hover {
+    #social .social-icon > a:hover,
+    #social .social-icon > a:focus:hover {
       -webkit-transition: .4s;
       transition: .4s;
       color: #d32f2f;
+
     }
     /*Icon social*/
 
