--- a/css/style.css
+++ b/css/style.css
@@ -65,36 +65,6 @@
         padding-left: 0 !important;
       }
     }
-
-    .mini-avatar {
-        position: relative;
-        top: -50px;
-        margin-bottom: -10px;
-    }
-
-    .mini-avatar img {
-        width: 100px;
-        height: 100px;
-        max-width: 100px;
-        max-height: 100px;
-        border: 5px solid rgba(255,255,255,0.5);
-    }
-
-    @media (max-width: 575px) {
-      .mini-avatar {
-          position: relative;
-          top: -25px;
-          margin-bottom: -10px;
-      }
-      .mini-avatar img {
-        width: 60px;
-        height: 60px;
-        max-width: 60px;
-        min-width: 60px;
-        border: 2px solid rgba(255,255,255,0.5);
-      }
-    }
-
     /*Card*/
 
     /*Main*/
@@ -230,44 +200,103 @@
     /*Buttons*/
 
     /*Flip social card*/
-    .flip-card {
-      background-color: transparent;
-      width: 350px;
-      height: 460px;
-      perspective: 1000px;
+    .mini-avatar {
+        position: relative;
+        top: -50px;
+        margin-bottom: -10px;
     }
 
-    .flip-card-inner {
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      transition: transform 0.6s;
-      transform-style: preserve-3d;
-      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    .mini-avatar img {
+        width: 100px;
+        height: 100px;
+        max-width: 100px;
+        max-height: 100px;
+        border: 5px solid rgba(255,255,255,0.5);
     }
 
-    .flip-card:hover .flip-card-inner {
-      transform: rotateY(180deg);
+    @media (max-width: 575px) {
+     .card-wrapper {
+        background-color: transparent;
+        width: 250px;
+        height: 460px;
+        -o-perspective: 1000px;
+        -webkit-perspective: 1000px;
+        -moz-perspective: 1000px;
+        perspective: 1000px;
+      }
+      .mini-avatar {
+          position: relative;
+          top: -25px;
+          margin-bottom: -10px;
+      }
+      .mini-avatar img {
+        width: 60px;
+        height: 60px;
+        max-width: 60px;
+        min-width: 60px;
+        border: 2px solid rgba(255,255,255,0.5);
+      }
     }
 
-    .flip-card-front, .flip-card-back {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      -webkit-backface-visibility: hidden;
-      backface-visibility: hidden;
+    .card-wrapper {
+        background-color: transparent;
+        min-width: 300px;
+        height: 460px;
+        max-width: 350px;
+        max-height: 460px;
+        -o-perspective: 1000px;
+        -webkit-perspective: 1000px;
+        -moz-perspective: 1000px;
+        perspective: 1000px;
     }
+    #card-1 {
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        -o-transition: all 0.8s ease-in-out;
+        -webkit-transition: all 0.8s ease-in-out;
+        -moz-transition: all 0.8s ease-in-out;
+        transition: all 0.8s ease-in-out;
+        -o-transform-style: preserve-3d;
+        -webkit-transform-style: preserve-3d;
+        -moz-transform-style: preserve-3d;
+        transform-style: preserve-3d;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      }
 
-    .flip-card-front {
-      background-color: #bbb;
-      color: black;
-    }
+      .do-flip {
+        -o-transform: rotateY(-180deg);
+        -webkit-transform: rotateY(-180deg);
+        -moz-transform: rotateY(-180deg);
+        transform: rotateY(-180deg);
+      }
 
-    .flip-card-back {
-      background-color: #2980b9;
-      color: white;
-      transform: rotateY(180deg);
-    }
+      #card-1 .face-front, #card-1 .face-back{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        -o-backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
+        -moz-backface-visibility: hidden;
+        backface-visibility: hidden;
+        z-index: 2;
+        -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      }
+      #card-1 .face-front {
+          background: white;
+          color: black;
+      }
+      #card-1 .face-back {
+          background: #2980b9;
+          color: white;
+          border: 1px solid grey;
+          -o-transform: rotateY(180deg);
+          -webkit-transform: rotateY(180deg);
+          -ms-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+      }
     /*Flip social card*/
 
 
