--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@
       }
     }
 
-    #team .card-wrapper {
+    .card-wrapper {
         background-color: transparent;
         min-width: 300px;
         height: 460px;
@@ -249,7 +249,7 @@
         -moz-perspective: 1000px;
         perspective: 1000px;
     }
-    #card-1, #card-2, #card-3 {
+    #card-1 {
         width: 100%;
         height: 100%;
         text-align: center;
@@ -271,7 +271,7 @@
         transform: rotateY(-180deg);
       }
 
-      #card-1, #card-2, #card-3 .face-front, #card-1, #card-2, #card-3 .face-back{
+      #card-1 .face-front, #card-1 .face-back{
         width: 100%;
         height: 100%;
         position: absolute;
@@ -284,11 +284,11 @@
         -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       }
-      #card-1, #card-2, #card-3 .face-front {
+      #card-1 .face-front {
           background: white;
           color: black;
       }
-      #card-1, #card-2, #card-3 .face-back {
+      #card-1 .face-back {
           background: #2980b9;
           color: white;
           border: 1px solid grey;
@@ -297,6 +297,105 @@
           -ms-transform: rotateY(180deg);
           transform: rotateY(180deg);
       }
+
+      #card-2 {
+          width: 100%;
+          height: 100%;
+          text-align: center;
+          -o-transition: all 0.8s ease-in-out;
+          -webkit-transition: all 0.8s ease-in-out;
+          -moz-transition: all 0.8s ease-in-out;
+          transition: all 0.8s ease-in-out;
+          -o-transform-style: preserve-3d;
+          -webkit-transform-style: preserve-3d;
+          -moz-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+          box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        }
+
+        .do-flip {
+          -o-transform: rotateY(-180deg);
+          -webkit-transform: rotateY(-180deg);
+          -moz-transform: rotateY(-180deg);
+          transform: rotateY(-180deg);
+        }
+
+        #card-2 .face-front, #card-2 .face-back{
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          -o-backface-visibility: hidden;
+          -webkit-backface-visibility: hidden;
+          -moz-backface-visibility: hidden;
+          backface-visibility: hidden;
+          z-index: 2;
+          -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+          -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+          box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        }
+        #card-2 .face-front {
+            background: white;
+            color: black;
+        }
+        #card-2 .face-back {
+            background: #2980b9;
+            color: white;
+            border: 1px solid grey;
+            -o-transform: rotateY(180deg);
+            -webkit-transform: rotateY(180deg);
+            -ms-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+        }
+
+        #card-3 {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            -o-transition: all 0.8s ease-in-out;
+            -webkit-transition: all 0.8s ease-in-out;
+            -moz-transition: all 0.8s ease-in-out;
+            transition: all 0.8s ease-in-out;
+            -o-transform-style: preserve-3d;
+            -webkit-transform-style: preserve-3d;
+            -moz-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+          }
+
+          .do-flip {
+            -o-transform: rotateY(-180deg);
+            -webkit-transform: rotateY(-180deg);
+            -moz-transform: rotateY(-180deg);
+            transform: rotateY(-180deg);
+          }
+
+          #card-3 .face-front, #card-3 .face-back{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            -o-backface-visibility: hidden;
+            -webkit-backface-visibility: hidden;
+            -moz-backface-visibility: hidden;
+            backface-visibility: hidden;
+            z-index: 2;
+            -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+          }
+          #card-3 .face-front {
+              background: white;
+              color: black;
+          }
+          #card-3 .face-back {
+              background: #2980b9;
+              color: white;
+              border: 1px solid grey;
+              -o-transform: rotateY(180deg);
+              -webkit-transform: rotateY(180deg);
+              -ms-transform: rotateY(180deg);
+              transform: rotateY(180deg);
+          }
+
     /*Flip social card*/
 
 
