--- a/css/style.css
+++ b/css/style.css
@@ -201,33 +201,41 @@
 
     /*Flip social card*/
     .mini-avatar {
-        position: relative;
-        top: -50px;
-        margin-bottom: -10px;
+      position: relative;
+      top: -50px;
+      margin-bottom: -10px;
     }
 
     .mini-avatar img {
-        width: 100px;
-        height: 100px;
-        max-width: 100px;
-        max-height: 100px;
-        border: 5px solid rgba(255,255,255,0.5);
+      width: 120px;
+      height: 120px;
+      max-width: 120px;
+      max-height: 120px;
+      border: 5px solid rgba(255,255,255,0.5);
+    }
+
+    @media (max-width: 460px) {
+      .card-wrapper {
+        min-width: 40%;
+        height: 80%;
+      }
+
     }
 
     @media (max-width: 575px) {
-     .card-wrapper {
+      .card-wrapper {
         background-color: transparent;
-        width: 250px;
-        height: 460px;
+        width: 60%;
+        height: 80%;
         -o-perspective: 1000px;
         -webkit-perspective: 1000px;
         -moz-perspective: 1000px;
         perspective: 1000px;
       }
       .mini-avatar {
-          position: relative;
-          top: -25px;
-          margin-bottom: -10px;
+        position: relative;
+        top: -25px;
+        margin-bottom: -10px;
       }
       .mini-avatar img {
         width: 60px;
@@ -239,163 +247,162 @@
     }
 
     .card-wrapper {
-        background-color: transparent;
-        min-width: 300px;
-        height: 460px;
-        max-width: 350px;
-        max-height: 460px;
-        -o-perspective: 1000px;
-        -webkit-perspective: 1000px;
-        -moz-perspective: 1000px;
-        perspective: 1000px;
+      background-color: transparent;
+      min-width: 250px;
+      height: 460px;
+      max-width: 350px;
+      max-height: 460px;
+      -o-perspective: 1000px;
+      -webkit-perspective: 1000px;
+      -moz-perspective: 1000px;
+      perspective: 1000px;
     }
     #card-1 {
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        -o-transition: all 0.8s ease-in-out;
-        -webkit-transition: all 0.8s ease-in-out;
-        -moz-transition: all 0.8s ease-in-out;
-        transition: all 0.8s ease-in-out;
-        -o-transform-style: preserve-3d;
-        -webkit-transform-style: preserve-3d;
-        -moz-transform-style: preserve-3d;
-        transform-style: preserve-3d;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      }
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      -o-transition: all 0.8s ease-in-out;
+      -webkit-transition: all 0.8s ease-in-out;
+      -moz-transition: all 0.8s ease-in-out;
+      transition: all 0.8s ease-in-out;
+      -o-transform-style: preserve-3d;
+      -webkit-transform-style: preserve-3d;
+      -moz-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
 
-      .do-flip {
-        -o-transform: rotateY(-180deg);
-        -webkit-transform: rotateY(-180deg);
-        -moz-transform: rotateY(-180deg);
-        transform: rotateY(-180deg);
-      }
+    .do-flip {
+      -o-transform: rotateY(-180deg);
+      -webkit-transform: rotateY(-180deg);
+      -moz-transform: rotateY(-180deg);
+      transform: rotateY(-180deg);
+    }
 
-      #card-1 .face-front, #card-1 .face-back{
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        -o-backface-visibility: hidden;
-        -webkit-backface-visibility: hidden;
-        -moz-backface-visibility: hidden;
-        backface-visibility: hidden;
-        z-index: 2;
-        -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      }
-      #card-1 .face-front {
-          background: white;
-          color: black;
-      }
-      #card-1 .face-back {
-          background: #2980b9;
-          color: white;
-          border: 1px solid grey;
-          -o-transform: rotateY(180deg);
-          -webkit-transform: rotateY(180deg);
-          -ms-transform: rotateY(180deg);
-          transform: rotateY(180deg);
-      }
+    #card-1 .face-front, #card-1 .face-back{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      -o-backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
+      backface-visibility: hidden;
+      z-index: 2;
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+    #card-1 .face-front {
+      background: white;
+      color: black;
+    }
+    #card-1 .face-back {
+      background: #2980b9;
+      color: white;
+      border: 1px solid grey;
+      -o-transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+      -ms-transform: rotateY(180deg);
+      transform: rotateY(180deg);
+    }
 
-      #card-2 {
-          width: 100%;
-          height: 100%;
-          text-align: center;
-          -o-transition: all 0.8s ease-in-out;
-          -webkit-transition: all 0.8s ease-in-out;
-          -moz-transition: all 0.8s ease-in-out;
-          transition: all 0.8s ease-in-out;
-          -o-transform-style: preserve-3d;
-          -webkit-transform-style: preserve-3d;
-          -moz-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-          box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        }
+    #card-2 {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      -o-transition: all 0.8s ease-in-out;
+      -webkit-transition: all 0.8s ease-in-out;
+      -moz-transition: all 0.8s ease-in-out;
+      transition: all 0.8s ease-in-out;
+      -o-transform-style: preserve-3d;
+      -webkit-transform-style: preserve-3d;
+      -moz-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
 
-        .do-flip {
-          -o-transform: rotateY(-180deg);
-          -webkit-transform: rotateY(-180deg);
-          -moz-transform: rotateY(-180deg);
-          transform: rotateY(-180deg);
-        }
+    .do-flip {
+      -o-transform: rotateY(-180deg);
+      -webkit-transform: rotateY(-180deg);
+      -moz-transform: rotateY(-180deg);
+      transform: rotateY(-180deg);
+    }
 
-        #card-2 .face-front, #card-2 .face-back{
-          width: 100%;
-          height: 100%;
-          position: absolute;
-          -o-backface-visibility: hidden;
-          -webkit-backface-visibility: hidden;
-          -moz-backface-visibility: hidden;
-          backface-visibility: hidden;
-          z-index: 2;
-          -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-          -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-          box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        }
-        #card-2 .face-front {
-            background: white;
-            color: black;
-        }
-        #card-2 .face-back {
-            background: #2980b9;
-            color: white;
-            border: 1px solid grey;
-            -o-transform: rotateY(180deg);
-            -webkit-transform: rotateY(180deg);
-            -ms-transform: rotateY(180deg);
-            transform: rotateY(180deg);
-        }
+    #card-2 .face-front, #card-2 .face-back{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      -o-backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
+      backface-visibility: hidden;
+      z-index: 2;
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+    #card-2 .face-front {
+      background: white;
+      color: black;
+    }
+    #card-2 .face-back {
+      background: #2980b9;
+      color: white;
+      border: 1px solid grey;
+      -o-transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+      -ms-transform: rotateY(180deg);
+      transform: rotateY(180deg);
+    }
 
-        #card-3 {
-            width: 100%;
-            height: 100%;
-            text-align: center;
-            -o-transition: all 0.8s ease-in-out;
-            -webkit-transition: all 0.8s ease-in-out;
-            -moz-transition: all 0.8s ease-in-out;
-            transition: all 0.8s ease-in-out;
-            -o-transform-style: preserve-3d;
-            -webkit-transform-style: preserve-3d;
-            -moz-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-          }
+    #card-3 {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      -o-transition: all 0.8s ease-in-out;
+      -webkit-transition: all 0.8s ease-in-out;
+      -moz-transition: all 0.8s ease-in-out;
+      transition: all 0.8s ease-in-out;
+      -o-transform-style: preserve-3d;
+      -webkit-transform-style: preserve-3d;
+      -moz-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
 
-          .do-flip {
-            -o-transform: rotateY(-180deg);
-            -webkit-transform: rotateY(-180deg);
-            -moz-transform: rotateY(-180deg);
-            transform: rotateY(-180deg);
-          }
+    .do-flip {
+      -o-transform: rotateY(-180deg);
+      -webkit-transform: rotateY(-180deg);
+      -moz-transform: rotateY(-180deg);
+      transform: rotateY(-180deg);
+    }
 
-          #card-3 .face-front, #card-3 .face-back{
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            -o-backface-visibility: hidden;
-            -webkit-backface-visibility: hidden;
-            -moz-backface-visibility: hidden;
-            backface-visibility: hidden;
-            z-index: 2;
-            -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-          }
-          #card-3 .face-front {
-              background: white;
-              color: black;
-          }
-          #card-3 .face-back {
-              background: #2980b9;
-              color: white;
-              border: 1px solid grey;
-              -o-transform: rotateY(180deg);
-              -webkit-transform: rotateY(180deg);
-              -ms-transform: rotateY(180deg);
-              transform: rotateY(180deg);
-          }
-
+    #card-3 .face-front, #card-3 .face-back{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      -o-backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
+      backface-visibility: hidden;
+      z-index: 2;
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+    #card-3 .face-front {
+      background: white;
+      color: black;
+    }
+    #card-3 .face-back {
+      background: #2980b9;
+      color: white;
+      border: 1px solid grey;
+      -o-transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+      -ms-transform: rotateY(180deg);
+      transform: rotateY(180deg);
+    }
     /*Flip social card*/
 
 
