--- a/css/style.css
+++ b/css/style.css
@@ -394,6 +394,14 @@
       -ms-transform: rotateY(180deg);
       transform: rotateY(180deg);
     }
+
+    #team .social-icon li > a:hover,
+    #team .social-icon li > a:focus:hover {
+      -webkit-transition: .4s;
+      transition: .4s;
+      color: #d32f2f;
+
+    }
     /*Flip social card*/
 
 
