--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,14 @@
       -moz-perspective: 1000px;
       perspective: 1000px;
     }
+
+    .do-flip {
+      -o-transform: rotateY(-180deg);
+      -webkit-transform: rotateY(-180deg);
+      -moz-transform: rotateY(-180deg);
+      transform: rotateY(-180deg);
+    }
+
     #card-1 {
       width: 100%;
       height: 100%;
@@ -261,13 +269,6 @@
       -moz-transform-style: preserve-3d;
       transform-style: preserve-3d;
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    }
-
-    .do-flip {
-      -o-transform: rotateY(-180deg);
-      -webkit-transform: rotateY(-180deg);
-      -moz-transform: rotateY(-180deg);
-      transform: rotateY(-180deg);
     }
 
     #card-1 .face-front, #card-1 .face-back{
@@ -312,13 +313,6 @@
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
-    .do-flip {
-      -o-transform: rotateY(-180deg);
-      -webkit-transform: rotateY(-180deg);
-      -moz-transform: rotateY(-180deg);
-      transform: rotateY(-180deg);
-    }
-
     #card-2 .face-front, #card-2 .face-back{
       width: 100%;
       height: 100%;
@@ -332,10 +326,12 @@
       -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
+
     #card-2 .face-front {
       background: white;
       color: black;
     }
+
     #card-2 .face-back {
       background: #2980b9;
       color: white;
@@ -361,13 +357,6 @@
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
-    .do-flip {
-      -o-transform: rotateY(-180deg);
-      -webkit-transform: rotateY(-180deg);
-      -moz-transform: rotateY(-180deg);
-      transform: rotateY(-180deg);
-    }
-
     #card-3 .face-front, #card-3 .face-back{
       width: 100%;
       height: 100%;
@@ -381,10 +370,12 @@
       -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
+
     #card-3 .face-front {
       background: white;
       color: black;
     }
+
     #card-3 .face-back {
       background: #2980b9;
       color: white;
@@ -395,13 +386,94 @@
       transform: rotateY(180deg);
     }
 
-    #team .social-icon li > a:hover,
-    #team .social-icon li > a:focus:hover {
-      -webkit-transition: .4s;
-      transition: .4s;
-      color: #d32f2f;
-
+    #card-4 {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      -o-transition: all 0.8s ease-in-out;
+      -webkit-transition: all 0.8s ease-in-out;
+      -moz-transition: all 0.8s ease-in-out;
+      transition: all 0.8s ease-in-out;
+      -o-transform-style: preserve-3d;
+      -webkit-transform-style: preserve-3d;
+      -moz-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
+
+    #card-4 .face-front, #card-4 .face-back{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      -o-backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
+      backface-visibility: hidden;
+      z-index: 2;
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+
+    #card-4 .face-front {
+      background: white;
+      color: black;
+    }
+
+    #card-4 .face-back {
+      background: #2980b9;
+      color: white;
+      border: 1px solid grey;
+      -o-transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+      -ms-transform: rotateY(180deg);
+      transform: rotateY(180deg);
+    }
+
+    #card-5 {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      -o-transition: all 0.8s ease-in-out;
+      -webkit-transition: all 0.8s ease-in-out;
+      -moz-transition: all 0.8s ease-in-out;
+      transition: all 0.8s ease-in-out;
+      -o-transform-style: preserve-3d;
+      -webkit-transform-style: preserve-3d;
+      -moz-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+
+    #card-5 .face-front, #card-5 .face-back{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      -o-backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
+      backface-visibility: hidden;
+      z-index: 2;
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+
+    #card-5 .face-front {
+      background: white;
+      color: black;
+    }
+
+    #card-5 .face-back {
+      background: #2980b9;
+      color: white;
+      border: 1px solid grey;
+      -o-transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+      -ms-transform: rotateY(180deg);
+      transform: rotateY(180deg);
+    }
+
     /*Flip social card*/
 
 
