implement about.html view

--- a/css/style.css
+++ b/css/style.css
@@ -327,14 +327,14 @@
       box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
-    #card-2 .face-front {rbavn
-      background: #512da8;
+    #card-2 .face-front {
+      background: white;
       color: black;
     }
 
     #card-2 .face-back {
-      background: white;
-      color: black;
+      background: #512da8;
+      color: white;
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
       -webkit-transform: rotateY(180deg);
