implement about.html view

--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@
       color: black;
     }
     #card-1 .face-back {
-      background: linear-gradient(to bottom right, rgba(0, 150, 136, 0.3) , rgba(0, 188, 212, 0.7));
+      background: linear-gradient(to bottom right, #1976d2 , rgba(0, 188, 212, 0.7));
       color: white;
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
@@ -435,7 +435,7 @@
     }
 
     #card-4 .face-back {
-      background: linear-gradient(to bottom right, rgba(0, 150, 136, 0.3) , rgba(0, 188, 212, 0.7));
+      background: linear-gradient(to bottom right, #1976d2 , rgba(0, 188, 212, 0.7));
       color: white;
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
