implement contact.html view

--- a/css/style.css
+++ b/css/style.css
@@ -523,7 +523,7 @@
       background-color: rgba(126, 123, 215, 0.2);
     }
 
-    .bg-info {
+    .bg-info-contact {
       background-color: rgba(126, 123, 215, 0.2);
     }
 
