implement contact.html view

--- a/css/style.css
+++ b/css/style.css
@@ -167,10 +167,11 @@
     .btn-outline-contact {
       color: white;
       border: 2px solid;
+      border-radius: 80px;
       font-family: 'Sen', sans-serif;
       letter-spacing: 2px;
       text-transform: uppercase;
-      background-color: linear-gradient(to bottom right, #1976d2 , rgba(0, 188, 212, 0.7));
+      background-color: #1976d2;
     }
 
     .btn-outline-download:hover, .btn-outline-download:focus, .btn-outline-download:active, .btn-outline-download.active {
