implement contact.html view

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@
       font-family: 'Sen', sans-serif;
       letter-spacing: 2px;
       text-transform: uppercase;
-      border-color: #1976d2;
+      border-color: white;
       background-color: #1976d2;
     }
 
